# 11labs_hackathon_2025

./: .env  .gitignore  README.md  app.py  install_certs.sh  pyproject.toml  requirements.txt  tools.py
agents/: __init__.py  agent_helpers.py  enhanced_agent.py  simple_agent.py
components/: components.py
eleven/: speak.py
network_embedding/: __init__.py  movie_matcher.py  movies_fuzzy_matching.py  sage_embedding_example.ipynb
notebooks/: explore_similarities.py  network_embed.py
outputs/: genre_labels.pkl  movie_embeddings.pkl
prompts/: 01-system-prompt.txt  02-system-prompt-ask.txt
